bad/for_void_over_void.example_compiler_output
ERROR
[1mbad/for_void_over_void.lat:4:7: [1;31merror: [0;1mfor iterator `x` cannot have type `void`[m
	for (void x : vfunc()) {}
	     [1;32m^[m
